ipc/ipdl/test/ipdl/error/DeleteRace.ipdl
// XXX kind of a gray area whether |__delete__| should be a part of the
// top-level protocol.  but if it's ever not, this test will break and
// we'll notice, right?
protocol DeleteRace {
parent:
    async M1();

child:
    async __delete__();

state START:
    send __delete__;
    recv M1 goto START;
};
